# GM_ROS_Project

./: CMakeLists.txt  README.md  README_attached_collision_objects.md  package.xml  setup.py
docs/: attached_collision_objects_solution.md  enhanced_collision_management.md
launch/: attached_objects_server.launch  rs007l_assembly_sim.launch
scripts/: gym_test.py  joint_commander.py  link6_listener.py  moveit_attached_objects_server.py  moveit_planner_server.py  robot_listener.py  test_pilz_planner.py  traj_follower.py
scripts/assets/urdf/: L_part.urdf  Rect_part.urdf  big_part.urdf
scripts/assets/urdf/RS007/: rs007l_panda.urdf  rs007l_panda_no_rot.urdf
scripts/assets/urdf/objects/meshes/: big_part.STL  big_part_2.STL
src/isaac_ros_bridge/: arm_control.py  robot_controller.py  sim_manager.py
src/isaac_ros_bridge/models/: spot_weld_offsets.py
src/isaac_ros_bridge/planner/: motion_planner.py  task_planner.py
src/isaac_ros_bridge/ros/: eef_pose_publisher.py
src/isaac_ros_bridge/utils/: franka_utils.py
srv/: AttachPart.srv  DetachPart.srv  PlanPose.srv
